# nepi_apps

./: .gitmodules  CLAUDE.md  LICENSE  README.md
nepi_app_ai_alerts/: CMakeLists.txt  README.md  package.xml
nepi_app_ai_alerts/api/: connect_app_ai_alerts.py
nepi_app_ai_alerts/msg/: AiAlerts.msg  AiAlertsStatus.msg
nepi_app_ai_alerts/params/: ai_alerts_app_params.yaml
nepi_app_ai_alerts/rui/: NepiAppAiAlerts.js
nepi_app_ai_alerts/scripts/: ai_alerts_app_node.py
nepi_app_ai_pt_tracker/: CMakeLists.txt  README.md  package.xml
nepi_app_ai_pt_tracker/msg/: TrackingErrors.msg  (+1 more)
nepi_app_ai_targeting/: CMakeLists.txt  README.md  package.xml
nepi_app_fake_gps/: CMakeLists.txt  LICENSE  package.xml
nepi_app_file_pub_img/: CMakeLists.txt  package.xml
nepi_app_file_pub_pcd/: CMakeLists.txt  package.xml
nepi_app_file_pub_vid/: CMakeLists.txt  LICENSE  package.xml
nepi_app_image_viewer/: CMakeLists.txt  README.md  package.xml
nepi_app_nav_sim/: CMakeLists.txt  package.xml
nepi_app_nav_sim/api/: connect_app_nav_sim.py
nepi_app_nav_sim/msg/: NepiAppHNavSimStatus.msg  NepiAppNavSimMasterStatus.msg  NepiAppNavSimStatus.msg  NepiAppNmeaSimStatus.msg
nepi_app_nav_sim/params/: nav_sim_app_params.yaml
nepi_app_nav_sim/rui/: NepiAppNavSim.js
nepi_app_nav_sim/scripts/: nav_sim_app_node.py
nepi_app_onvif_mgr/: CMakeLists.txt  README.md  package.xml
nepi_app_pan_tilt_auto/: CMakeLists.txt  README.md  deploy_nepi_app.sh  package.xml
nepi_app_pointcloud_viewer/: CMakeLists.txt  README.md  package.xml
nepi_app_template/: deploy_nepi_repo.sh  package.xml
(+63 files in other folders)
