<?xml version="1.0"?>
<package format="2">
  <name>nepi_app_nav_sim</name>
  <version>0.0.0</version>
  <description>NEPI navigation data simulator application — NMEA and HNav TCP servers</description>

  <maintainer email="nepi@numurus.com">numurus</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>sys</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
